<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".activities.ScheduleMeetingActivity">

    <include
        android:id="@+id/top_bar_schedule_meeting"
        layout="@layout/top_bar_schedule_meeting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meeting_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/grey_background"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:gravity="top|start"
        android:padding="15dp"
        android:text="@string/meeting_date_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_schedule_meeting" />

    <TextView
        android:id="@+id/meeting_start_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/grey_background"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:gravity="top|start"
        android:padding="15dp"
        android:text="@string/meeting_start_time_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_date" />

    <TextView
        android:id="@+id/meeting_end_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/grey_background"
        android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
        android:gravity="top|start"
        android:padding="15dp"
        android:text="@string/meeting_end_time_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_start_time" />

    <EditText
        android:id="@+id/meeting_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/white_background"
        android:gravity="top|start"
        android:hint="@string/description_text"
        android:imeOptions="actionDone|actionGo|actionSend"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/meeting_end_time" />

    <Button
        android:id="@+id/button_submit_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/green_background"
        android:text="@string/submit_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meeting_description" />

</androidx.constraintlayout.widget.ConstraintLayout>